<resources>
    <string name="app_name">FragmentedCSLab</string>
    <string name="Password">\@string/Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Rules">\@string/rules</string>
    <string name="rules">Rules</string>
    <string name="cybersecurity_laboratory">CyberSecurity Laboratory</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="_2019">2019</string>
    <string name="csr_lab">CSR LAB</string>
</resources>
